5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1808_2574.log
== TEST (2019-06-12 18:32:48) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(size(s)):
	if(s[i].islower() and s[i].isupper() and len(s)>=8):
		print("SENHA VALIDA")
	else:
		print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:33:52) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(size(s)):
	if(s[i].islower() and s[i].isupper() and len(s)<=8):
		print("SENHA VALIDA")
	else:
		print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:35:25) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(size(s)):
	if(s[i].islower()):
		if(s[i].isupper()):
			if(len(s)>=8):
				print("SENHA VALIDA")
	else:
		print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:35:46) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(s):
	if(s[i].islower()):
		if(s[i].isupper()):
			if(len(s)>=8):
				print("SENHA VALIDA")
	else:
		print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:36:00) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(s):
	if(s[i].islower()):
		if(s[i].isupper()):
			if(len(s)>=8):
				print("SENHA VALIDA")
	else:
		print("SENHA INVALIDA")
		
-- EXECUTION TIME:
1.20131
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1808/2574/main.py", line 4, in <module>
    for i in range(s):
TypeError: 'str' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:36:01) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(s):
	if(s[i].islower()):
		if(s[i].isupper()):
			if(len(s)>=8):
				print("SENHA VALIDA")
	else:
		print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:36:11) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(s):
	if(s[i].islower()):
		if(s[i].isupper()):
			if(len(s)>=8):
				print("SENHA VALIDA")
	else:
		print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:36:26) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(len(s):
	if(s[i].islower()):
		if(s[i].isupper()):
			if(len(s)>=8):
				print("SENHA VALIDA")
	else:
		print("SENHA INVALIDA")
		
-- ERROR:
File "XXXX", line 4
    for i in range(len(s):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:36:31) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(len(s)):
	if(s[i].islower()):
		if(s[i].isupper()):
			if(len(s)>=8):
				print("SENHA VALIDA")
	else:
		print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:36:50) 
-- CODE:
from numpy import*
s=input("Insira sua senha :")

for i in range(len(s)):
	if(s[i].islower()):
		if(s[i].isupper()):
			if(len(s)>=8):
print("SENHA VALIDA")
	else:
print("SENHA INVALIDA")
		
-- EXECUTION TIME:
0.627523
-- ERROR:
  File "/home/codebench/codes/1808/2574/main.py", line 8
    print("SENHA VALIDA")
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
